# abv_gnc

./: .gitignore  .readthedocs.yaml  readme.md  setup.sh
abv_gnc/: CMakeLists.txt  package.xml
abv_gnc/common/: CMakeLists.txt
abv_gnc/common/include/common/: AbvState.hpp  ConfigurationManager.h  Configurations.h  RateController.hpp  RosNavigationListener.h  RosTopicManager.h  SignalHandler.hpp  UdpClient.h
abv_gnc/common/src/: ConfigurationManager.cpp  DataLogger.cpp  RosNavigationListener.cpp  RosTopicManager.cpp  UdpClient.cpp
abv_gnc/configuration/: config copy.yaml  config.yaml
abv_gnc/dependencies/JETGPIO-1.2/: get_chip_id  hardware
abv_gnc/dependencies/JETGPIO-1.2/EXAMPLES_C++/: gpio_solenoid  gpio_solenoid.cpp  gpiosolenoidREADME  jetgpio_example  run sams code
abv_gnc/dependencies/libmotioncapture/include/libmotioncapture/: fzmotion.h
abv_gnc/dependencies/libmotioncapture/src/: fzmotion.cpp
abv_gnc/test/: CMakeLists.txt  main.cpp
abv_gnc/tools/launch/: gnc.py
abv_gnc/tools/scripts/: deps.sh  run.sh  sim.sh
common/src/: RosNavigationListener.cpp
control/: CMakeLists.txt
control/include/abv_controller/: ThrusterCommander.h  Vehicle.h
control/src/: Controller.cpp  StateMachine.cpp  ThrusterCommander.cpp  Vehicle.cpp  main.cpp
docker/: build_amd64.sh  dockerfile  run.sh  test_arm64.sh
docker/rocky-linux/: setup.sh
docs/source/: architecture.md  conf.py  index.md
guidance/: CMakeLists.txt
guidance/src/: FromFileGenerator.cpp  RosCommandSource.cpp  StateMachine.cpp  main.cpp
navigation/: CMakeLists.txt
navigation/include/abv_navigation/: VehicleStateTracker.h
navigation/src/: VehicleStateTracker.cpp  main.cpp
scripts/: run.sh  setup.sh  sim.sh
src/abv_bridge/: CMakeLists.txt  package.xml
src/abv_bridge/include/abv_bridge/: ControllerStatusConvertor.h  GazeboStateConvertor.h  NavigationConvertor.h  WaypointConvertor.h
src/abv_bridge/src/: ControllerStatusConvertor.cpp  GazeboStateConvertor.cpp  NavigationConvertor.cpp  WaypointConvertor.cpp  main.cpp
src/abv_bridge_old/: design.md
src/abv_bringup/: CMakeLists.txt  package.xml
src/abv_commander/: CMakeLists.txt  package.xml
src/abv_commander/include/abv_commander/: CommanderComms.h  InputHandler.h
src/abv_commander/src/: CommanderComms.cpp  InputHandler.cpp  main.cpp
src/abv_common/: CMakeLists.txt  package.xml
src/abv_common/include/abv_common/: AbvState.hpp  ArrivalStatus.hpp  ConfigurationManager.h  Configurations.h  ConsumableBuffer.hpp  HeartbeatPublisher.h  RosNavigationListener.h  RosTopicManager.h  ThreadSafe.hpp  Utils.hpp  Watchdog.h
src/abv_common/src/: ConfigurationManager.cpp  DataLogger.cpp  HeartbeatPublisher.cpp  RosNavigationListener.cpp  RosTopicManager.cpp  UdpClient.cpp  Watchdog.cpp
src/abv_control/: CMakeLists.txt
src/abv_controller/: CMakeLists.txt  package.xml
src/abv_controller/include/abv_controller/: CommandHandler.h  Controller.h  ExternalControlPolicy.h  GoalType.hpp  GpioThrusterDriver.h  I2cThrusterDriver.h  IControlPolicy.hpp  IThrusterDriver.hpp  IThrusterMapper.hpp  LookupTableThrusterMapper.h  MatrixThrusterMapper.h  PidControlPolicy.h  StateMachine.h  ThrusterCommander.h  ThrusterDriverFactory.hpp  UdpThrusterDriver.h  Vehicle.h
src/abv_controller/src/: CommandHandler.cpp  Controller.cpp  ExternalControlPolicy.cpp  GpioThrusterDriver.cpp  I2cThrusterDriver.cpp  LookupTableThrusterMapper.cpp  MatrixThrusterMapper.cpp  PidControlPolicy.cpp  StateMachine.cpp  ThrusterCommander.cpp  UdpThrusterDriver.cpp  Vehicle.cpp  main.cpp
src/abv_description/: CMakeLists.txt  package.xml
src/abv_description/launch/: visualize.launch.py
src/abv_description/meshes/widow-xl/: finger.dae  forearm.dae  shoulder.dae  shoulder_mount.dae  wrist.dae  wrist_rotate.dae
src/abv_description/rviz/: abv.rviz
src/abv_description/urdf/: abv.urdf  abv.urdf.xacro  abv_chassis-standalone.urdf.xacro  abv_chassis.urdf.xacro  widow-xl.urdf
src/abv_description/urdf/manipulators/: widow_xl-standalone.urdf.xacro  widow_xl.urdf.xacro
src/abv_gui/: CMakeLists.txt  package.xml
src/abv_gui/include/abv_gui/: ButtonActions.hpp  ButtonAdapter.hpp  CommandPanel.h  LivePlot.h  NetworkPinger.h  NodeHealthPanel.h  StatusIndicator.hpp  StatusPanel.h  TableTopView.h  TopicAdapter.hpp  TopicConversions.hpp
src/abv_gui/src/: CommandPanel.cpp  LivePlot.cpp  NetworkPinger.cpp  NodeHealthPanel.cpp  StatusPanel.cpp  TableTopView.cpp  main.cpp
src/abv_guidance/: CMakeLists.txt  package.xml
src/abv_guidance/include/abv_guidance/: ICommandSource.hpp  IPathGenerator.hpp  InternalTypes.hpp  PathWatchdog.h  RosCommandSource.h  StateMachine.h  StraightLineGenerator.h
src/abv_guidance/src/: FromFileGenerator.cpp  PathWatchdog.cpp  RosCommandSource.cpp  StateMachine.cpp  StraightLineGenerator.cpp  main.cpp
src/abv_msgs/: CMakeLists.txt  package.xml
src/abv_msgs/msg/: AbvControllerCommand.msg  AbvControllerStatus.msg  AbvGuidanceCommand.msg  AbvGuidanceStatus.msg  AbvNodeStatus.msg  AbvState.msg  AbvThrusterStatus.msg
src/abv_msgs/srv/: AbvControlAction.srv
src/abv_navigation/: CMakeLists.txt  package.xml
src/abv_navigation/include/abv_navigation/: ExtendedKalmanFilter.h  IStateFetcher.h  NavFreshness.h  OptitrackStateFetcher_LibMocap.h  RosStatePublisher.h  SimulatedStateFetcher.h  StampedAbvState.h  VehicleStateTracker.h
src/abv_navigation/src/: ExtendedKalmanFilter.cpp  OptitrackStateFetcher_LibMocap.cpp  RosStatePublisher.cpp  SimulatedStateFetcher.cpp  VehicleStateTracker.cpp  main.cpp
src/abv_rl/: package.xml  setup.cfg  setup.py
src/abv_rl-cpp/: CMakeLists.txt  package.xml
src/abv_rl-cpp/abv_rl_onnx/: critic_0.onnx  critic_2.onnx
src/abv_rl-cpp/include/abv_rl-cpp/: rl_policy_node.hpp
src/abv_rl-cpp/src/: rl_policy_node.cpp
src/abv_simulator/: CMakeLists.txt  package.xml
src/abv_simulator/include/abv_simulator/: OptitrackEmulator.h  RosTopicManager.h  VehicleSimulator.h
src/abv_simulator/src/: OptitrackEmulator.cpp  VehicleSimulator.cpp  main.cpp
src/abv_teleop/: CMakeLists.txt  (+1 more)
test/: CMakeLists.txt  ThrusterCommander_Test.cpp
(+49 files in other folders)
