cmake_minimum_required(VERSION 3.8)
project(abv_navigation)

# Compiler flags
if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# Packages
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(abv_msgs REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(yaml-cpp REQUIRED)
find_package(plog REQUIRED)
find_package(libmotioncapture REQUIRED)

set(SOURCES
  src/ExtendedKalmanFilter.cpp
	src/OptitrackStateFetcher_LibMocap.cpp
  src/RosStatePublisher.cpp
	src/SimulatedStateFetcher.cpp
	src/VehicleStateTracker.cpp
	src/main.cpp
)

include(${CMAKE_CURRENT_LIST_DIR}/../../abv_gnc/common/CMakeLists.txt)

add_executable(${PROJECT_NAME} ${SOURCES} ${COMMON_SOURCES})
target_include_directories(${PROJECT_NAME} PRIVATE 
    ${CMAKE_CURRENT_LIST_DIR}/include
    ${COMMON_INCLUDE_DIR}
    ${EIGEN3_INCLUDE_DIRS}
)

# Dependencies
ament_target_dependencies(${PROJECT_NAME}
  rclcpp
  abv_msgs
  Eigen3
)

target_link_libraries(${PROJECT_NAME} yaml-cpp plog::plog libmotioncapture::libmotioncapture)
install(TARGETS ${PROJECT_NAME} DESTINATION lib/${PROJECT_NAME})

ament_package()